syntax = "proto3";
package IM.Login;
import "IM.BaseDefine.proto";
option java_package = "com.mogujie.tt.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;

//service id:    0x0001

message IMMsgServReq {
    //cmd id:        0x0101
}

message IMMsgServRsp {
    //cmd id:        0x0102
    IM.BaseDefine.ResultType result_code = 1;
    optional string prior_ip = 2;
    optional string backip_ip = 3; 
    optional uint32 port = 4;
}

message IMLoginReq {
    //cmd id:        0x0103
    string user_name = 1;
    string password = 2;
    IM.BaseDefine.UserStatType online_status = 3;
    IM.BaseDefine.ClientType client_type = 4;
    optional string client_version = 5;
}

message IMLoginRes {
    //cmd id:        0x0104
    uint32 server_time = 1;
    IM.BaseDefine.ResultType result_code = 2;
    optional string result_string = 3;
    optional IM.BaseDefine.UserStatType online_status = 4;
    optional IM.BaseDefine.UserInfo user_info = 5;
}

message IMLogoutReq {
    //cmd id:        0x0105
}

message IMLogoutRsp {
    //cmd id:        0x0106
    uint32 result_code = 1;
}

message IMKickUser {
    //cmd id:        0x0107
    uint32 user_id = 1;
    IM.BaseDefine.KickReasonType kick_reason = 2;
}

message IMDeviceTokenReq {
    //cmd id:        0x0108
    uint32 user_id = 1;
    string device_token = 2;
    optional IM.BaseDefine.ClientType client_type = 3;
    optional bytes attach_data = 20;
}

message IMDeviceTokenRsp {
    //cmd id:         0x0109
    uint32 user_id = 1;
    optional bytes attach_data = 20;
}

//只给移动端请求
message IMKickPCClientReq {
    //cmd id:        0x010a
    uint32 user_id = 1;
}

message IMKickPCClientRsp {
    //cmd id:         0x010b
    uint32 user_id = 1;
    uint32 result_code = 2;
}